[package]
name = "bitflip"
version = "0.1.0"
authors = ["Kārlis Seņko <karlis3p70l1ij@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
clap = "2.29.0"
termion = "1.5.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"


[dependencies.tgame]
#path = ""
git = "https://github.com/karliss/tgame.git"
features = ["serialize"]